[gd_scene load_steps=8 format=2]

[ext_resource path="res://Code/SceneScripts/Features/Feature_RigidBodyRayCastGrab.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.004, 0.004, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[sub_resource type="SphereMesh" id=3]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_fixed_size = true

[sub_resource type="SphereShape" id=5]
radius = 0.17117

[sub_resource type="SphereShape" id=6]
radius = 0.0104968

[node name="Feature_RigidBodyRayCastGrab" type="Spatial"]
script = ExtResource( 1 )

[node name="RayCastPosition" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="RayCastPosition"]
enabled = true
cast_to = Vector3( 0, -3, 0 )

[node name="RayCastMesh" type="MeshInstance" parent="RayCastPosition"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="RayCastHitMarker" type="MeshInstance" parent="RayCastPosition"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00013978 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="GrabArea" type="Area" parent="RayCastPosition/RayCastHitMarker"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="GrabAreaShape" type="CollisionShape" parent="RayCastPosition/RayCastHitMarker/GrabArea"]
shape = SubResource( 5 )

[node name="CollisionKinematicBody" type="KinematicBody" parent="RayCastPosition/RayCastHitMarker"]

[node name="CollisionBodyShape" type="CollisionShape" parent="RayCastPosition/RayCastHitMarker/CollisionKinematicBody"]
shape = SubResource( 6 )

[node name="HingeJoint" type="HingeJoint" parent="RayCastPosition/RayCastHitMarker"]
nodes/node_a = NodePath("../CollisionKinematicBody")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0
angular_limit/bias = 0.99
angular_limit/relaxation = 0.5

[connection signal="body_entered" from="RayCastPosition/RayCastHitMarker/GrabArea" to="." method="_on_GrabArea_body_entered"]
[connection signal="body_exited" from="RayCastPosition/RayCastHitMarker/GrabArea" to="." method="_on_GrabArea_body_exited"]
